<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ScreamDroid</string>
    <string name="input_text">ScreamThisShit</string>
    <string name="log_error">Error</string>
    <string name="menu_scream">Scream</string>
    <string name="menu_settings">Settings</string>
    <string name="pref_erase">Erase text input</string>
    <string name="pref_erase_summ">Reset input when selecting edit</string>
    <string name="pref_upper_case">Shout</string>
    <string name="pref_upper_case_summ">Convert to uppercase</string>
    <string name="pref_force_landscape">Force landscape</string>
    <string name="pref_force_landscape_summ">Force landscape mode when shouting</string>
    <string name="textView_default">foo bar</string>
    <string name="edit_button">Edit</string>
    <string name="shout_hint">Your text</string>
</resources>
