<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
            android:key="@string/pref_erase"
            android:title="@string/pref_erase"
            android:summary="@string/pref_erase_summ"
            android:defaultValue="true" />
    <CheckBoxPreference
            android:key="@string/pref_upper_case"
            android:title="@string/pref_upper_case"
            android:summary="@string/pref_upper_case_summ"
            android:defaultValue="false" />
    <CheckBoxPreference
            android:key="@string/pref_force_landscape"
            android:title="@string/pref_force_landscape"
            android:summary="@string/pref_force_landscape_summ"
            android:defaultValue="false" />
</PreferenceScreen>